# mcp-crawl4ai-rag

./: .env  .env.example  .gitignore  .gitmodules  ASTCHUNK_DML_INTEGRATION.md  ASTCHUNK_INTEGRATION_GUIDE.md  CHUNK_USER_MANUALS_GUIDE.md  CODE_FLOW_DIAGRAM.md  DATABASE_SCHEMA_FIX_SUMMARY.md  EMBEDDING_SUMMARY_INTEGRATION_SUMMARY.md  ERROR_HANDLING_IMPLEMENTATION.md  FIX_CODE_EXAMPLE_EXTRACTION.md  INSTALLATION.md  INTEGRATION_SUCCESS.md  PATTERN_AWARE_CHUNKER_INTEGRATION.md  PATTERN_HANDLERS_IMPLEMENTATION.md  PROGRESS_TRACKING_IMPLEMENTATION.md  QUICK_REFERENCE_DML_UPDATE.md  QUICK_START_DML.md  README.md  SUMMARIZATION_QUICK_START.md  SUMMARY_GENERATOR_IMPLEMENTATION.md  convert_html_to_markdown.py  delete_source_data.sql  delete_source_data_function.sql  demo_embedding_generator.py  demo_error_handling.py  demo_orchestrator.py  install_deps_without_sudo.py  mcp.json  pyproject.toml  test_astchunk_integration.py  test_code_summarization.py  test_dml_parser.py  test_embedding_generator.py  test_metadata_extractor.py  test_orchestrator.py  test_orchestrator_integration.py  test_progress_tracker.py  test_semantic_chunker_comprehensive.py  (+2 more)
chroma_db/: chroma.sqlite3
config/: README.md
core/: CLI_STRUCTURE_FINAL.md  PROGRESS_TRACKING.md  REFACTORING_SUMMARY.md  __init__.py  __main__.py  chunk_user_manuals.py  cli.py  code_summarizer.py  crawl_pipeline.py  crawl_simics_source.py  debug_embeddings.py  debug_search.py  delete_all_records.py  extract_simics_urls.py  query_rag.py  simple_crawl_json.py
database/: README.md
docs/: BATCH_COMPLETIONS_API.md  BATCH_PROCESSING.md  DATABASE_BACKENDS.md  ENHANCED_BATCH_PROCESSING.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  PARALLEL_PROCESSING_ANALYSIS.md  RAG_QUERY_USAGE.md  README.md  TEMPORAL_QUERIES.md  TRANSACTION_SUPPORT.md  batch_ingest_errors.json
examples/: README.md
knowledge_graphs/: README_Simics.md  demo_simics_analysis.py  parse_simics_into_neo4j.py  query_simics_knowledge_graph.py  simics_dml_parser.py  simics_test_analyzer.py  test_simics_integration.py
llms/: __init__.py  copilot_client.py
pipeline_output/: local_urls.json  sitemap.txt
progress/: checklist.txt  simics_crawl_progress.json
scripts/: README.md  Usage.md  apply_all_migrations.py  apply_documentation_migration.py  check_qwen_dims.py  chunk_user_manuals.py  crawl_from_json.py  crawl_local_files.py  crawl_pipeline.py  crawl_simics_source.py  delete_all_records.py  download_hf_model.py  download_models_from_chinese_mirror.py  download_pages_locally.py  download_single_page.py  extract_simics_urls.py  kill_server.sh  (+3 more)
(+166 files in other folders)
