[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "mcp>=1.19.0",
    "supabase==2.15.1",
    "openai>=1.90.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=4.1.0",
    "neo4j>=5.28.1",
    "httpx>=0.28.1",
    "aiofiles>=23.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "protobuf>=3.20.0",
    "litellm @ git+https://github.com/fenghaitao/litellm.git",
    "tree-sitter~=0.24",
    "filelock>=3.0.0",
    # CLI Framework dependencies
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    # Database backends
    "chromadb>=0.5.0",
    # Git integration
    "gitpython>=3.1.0",
    # Property-based testing
    "hypothesis>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server", "core"]

[project.scripts]
simics-rag = "__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "asyncio: marks tests as async tests",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
